# PowerAppp_AppNghiPhep

./: .cursorrules  ACTIVESCREEN_FIX_SUMMARY.md  ACTIVITY_DIAGRAMS_SUMMARY.md  App.yaml  App_SharePoint.yaml  COMPLETION_REPORT.md  COMPONENTS_SCREENS_COMPLIANCE_REPORT.md  COMPREHENSIVE_COMPLIANCE_AND_UI_REPORT.md  CURSORRULES_INTEGRATION_PLAN.md  CURSORRULES_UPDATE_REPORT.md  DATATABLE_GROUPCONTAINER_RULES.md  I_Function_Description.md  LoginScreen_SharePoint_Compliance_Report.md  MISSING_USECASES_ANALYSIS.md  NAVIGATION_FIX_SUMMARY.md  NEW_RULES_FROM_CONVERSATION.md  README.md  README_Activity_Diagrams.md  README_YAML_HANDLERS.md  REPORTS_CHART_COMPLIANCE_URD.md  STATSCARD_IMPROVEMENT_SUMMARY.md  UI_ENHANCEMENT_IMPLEMENTATION_GUIDE.md  activity_diagrams.puml  comparison_analysis.md  complete_activity_diagrams.puml  control_reference_violations.txt  database_analysis_and_improvements.md  demo_basic_from_file.yaml  demo_basic_output.yaml  demo_final_from_file.yaml  demo_final_output.json  demo_final_output.yaml  final_template_basic_button.yaml  final_template_input_field.yaml  final_yaml_handler.py  function_coverage_check.md  function_ui_comparison.md  library_analysis.md  package_implementation.py  powerapp_yaml_lib_demo.py  (+7 more)
powerapp_yaml_package/: FINAL_TYPE_SAFETY_VERDICT.md  PACKAGE_SUMMARY.md  PYDANTIC_RECOMMENDATION.md  README.md  TYPE_SAFETY_ANALYSIS.md  advanced_card.json  advanced_card.yaml  demo_card_layout.yaml  demo_package.py  pydantic_vs_dataclass_comparison.py  pyproject.toml  requirements.txt  setup.py
powerapp_yaml_package/examples/: __init__.py  advanced_usage.py  basic_usage.py  comparison_demo.py
powerapp_yaml_package/powerapp_yaml/: __init__.py
powerapp_yaml_package/powerapp_yaml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
powerapp_yaml_package/powerapp_yaml/core/: __init__.py  advanced_handler.py  base_handler.py  (+2 more)
powerapp_yaml_package/tests/: __init__.py  conftest.py
(+310 files in other folders)
